--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+ @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 html {
   line-height: 1.15; /* 1 */
@@ -22,6 +23,7 @@ html {
 
 body {
   margin: 0;
+  font-family: 'Nunito', sans-serif;
 }
 
 /**
