--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,6 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
- @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 html {
   line-height: 1.15; /* 1 */
@@ -23,7 +22,6 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Nunito', sans-serif;
 }
 
 /**
@@ -623,6 +621,50 @@ video {
   .container {
     max-width: 1280px;
   }
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+}
+
+.pagination .page-item .page-link {
+  padding: .75rem;
+  display: block;
+  text-decoration: none;
+  border-top-width: 1px;
+  border-left-width: 1px;
+  border-bottom-width: 1px;
+  background-color: #ffffff;
+  color: #2779BD;
+}
+
+.pagination .page-item .page-link:hover {
+  background-color: #f1f5f8;
+}
+
+.pagination .page-item:first-child .page-link {
+  border-top-left-radius: .25rem;
+  border-bottom-left-radius: .25rem;
+}
+
+.pagination .page-item:last-child .page-link {
+  border-right-width: 1px;
+  border-top-right-radius: .25rem;
+  border-bottom-right-radius: .25rem;
+}
+
+.pagination .page-item.active .page-link {
+  background-color: #2779BD;
+  border-color: #2779BD;
+  color: #ffffff;
+}
+
+.pagination .page-item.disabled .page-link {
+  background-color: #f1f5f8;
+  color: #8795a1;
 }
 
 .sr-only {
