--- a/public/css/main.css
+++ b/public/css/main.css
@@ -595,6 +595,18 @@ video {
   height: auto;
 }
 
+@font-face {
+  font-family: 'Nunito Sans', sans-serif;
+
+  font-style: normal;
+
+  font-weight: 400;
+
+  src: url(https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap) format('woff2');
+
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 .container {
   width: 100%;
 }
@@ -631,14 +643,18 @@ video {
 }
 
 .pagination .page-item .page-link {
-  padding: .75rem;
-  display: block;
-  text-decoration: none;
+  background-color: #fff;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  border-right-width: 1px;
   border-top-width: 1px;
-  border-left-width: 1px;
   border-bottom-width: 1px;
-  background-color: #ffffff;
-  color: #2779BD;
+  color: #000;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 
 .pagination .page-item .page-link:hover {
@@ -646,20 +662,33 @@ video {
 }
 
 .pagination .page-item:first-child .page-link {
-  border-top-left-radius: .25rem;
-  border-bottom-left-radius: .25rem;
+  margin-right: 1.5rem;
+  border-width: 1px;
+  border-radius: 0.25rem;
+}
+
+.pagination .page-item:nth-child(2) .page-link {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+  border-left-width: 1px;
+}
+
+.pagination .page-item:nth-last-child(2) .page-link {
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
 }
 
 .pagination .page-item:last-child .page-link {
-  border-right-width: 1px;
-  border-top-right-radius: .25rem;
-  border-bottom-right-radius: .25rem;
+  margin-left: 1.5rem;
+  border-width: 1px;
+  border-radius: 0.25rem;
 }
 
 .pagination .page-item.active .page-link {
-  background-color: #2779BD;
-  border-color: #2779BD;
-  color: #ffffff;
+  background-color: #bee3f8;
+  border-width: 1px;
+  border-color: #4299e1;
+  font-weight: 700;
 }
 
 .pagination .page-item.disabled .page-link {
